feat(project): adding context path and database configurations

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,13 @@
 
+server:
+  servlet:
+    context-path: /api/product-service
+
+spring:
+  data:
+    mongodb:
+      host: 127.0.0.1
+      port: 27017
+      database: products
+      
+
