--- a/devops/docker-compose.yml
+++ b/devops/docker-compose.yml
@@ -1,10 +1,10 @@
 version: '3.3'
 services:
-  mongo:
+  mongodb-product-service:
     image: mongo:latest
-    container_name: mongodb
+    container_name: mongodb-product-service
     ports:
-      - 27017:27017
+      - 27018:27017
     volumes:
       - ./volume/db:/data/db
     environment:
