--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ plugins {
 group = 'br.com.productservice'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
+apply plugin: 'jacoco'
 
 configurations {
 	developmentOnly
@@ -18,9 +19,11 @@ configurations {
 	}
 }
 
+
 repositories {
 	mavenCentral()
 }
+
 
 ext {
 	set('springCloudVersion', "Hoxton.SR3")
@@ -34,11 +37,10 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 	compileOnly 'org.projectlombok:lombok'
+	annotationProcessor 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	annotationProcessor 'org.projectlombok:lombok'
-	testImplementation('org.springframework.boot:spring-boot-starter-test') {
-		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
-	}
+	testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '2.2.4.RELEASE'
 }
 
 dependencyManagement {
@@ -47,6 +49,3 @@ dependencyManagement {
 	}
 }
 
-test {
-	useJUnitPlatform()
-}
